syntax = "proto3";

package order;

service OrderService {
  rpc CreateOrder(CreateOrderRequest) returns (OrderResponse) {}
  rpc GetOrder(OrderRequest) returns (OrderResponse) {}
  rpc GetUserOrders(UserOrdersRequest) returns (UserOrdersResponse) {}
  rpc UpdateOrderStatus(UpdateOrderStatusRequest) returns (OrderResponse) {}
}

message CreateOrderRequest {
  string user_id = 1;
  repeated OrderItem items = 2;
}

message OrderItem {
  string product_id = 1;
  int32 quantity = 2;
}

message OrderRequest {
  string order_id = 1;
}

message UserOrdersRequest {
  string user_id = 1;
}

message UpdateOrderStatusRequest {
  string order_id = 1;
  string status = 2;
}

message OrderResponse {
  string order_id = 1;
  string user_id = 2;
  string status = 3;
  double total_amount = 4;
  repeated OrderItem items = 5;
  string created_at = 6;
  string updated_at = 7;
}

message UserOrdersResponse {
  repeated OrderResponse orders = 1;
} 