syntax = "proto3";

package user;

service UserService {
  rpc GetUser(UserRequest) returns (UserResponse) {}
}

message UserRequest {
  string user_id = 1;
}

message UserResponse {
  string user_id = 1;
  string name = 2;
  int32 age = 3;
  string occupation = 4;
  string learning = 5;
} 